--- a/Azure Site Replicado/style/index.css
+++ b/Azure Site Replicado/style/index.css
@@ -1,8 +1,17 @@
 .containerTopo {
   background: #1b1a20;
   display: flex;
+  margin-left: -15px;
+  margin-top: -10px;
+  margin-right: -15px;
+  flex-direction: column;
   flex-direction: row;
   align-items: flex-end;
+}
+.imagemLogo {
+  height: 45px;
+  width: 9%;
+  margin-left: 30px;
 }
 .textoTopo {
   font-family: "Lato", sans-serif;
@@ -22,6 +31,7 @@
 .contaGratuita {
   background: #1b1a20;
   color: #ade424;
+  margin-left: 40px;
 }
 .contaGratuita:hover {
   color: #8ec723;
@@ -30,7 +40,6 @@
 .menuTopo > div {
   width: 170px;
   height: 80px;
-  margin: 10px;
   text-align: center;
   line-height: 75px;
   font-size: 15;
