--- a/Azure Site Replicado/style/index.css
+++ b/Azure Site Replicado/style/index.css
@@ -163,19 +163,22 @@
   font-family: "Segoe UI";
   flex-direction: column;
   background: #2b3862;
-  height: 800px;
   margin-left: -10px;
   margin-right: -10px;
 }
-.containerMapa > p {
-  width: 500px;
-  background: #2b3862;
-  font-family: "Segoe UI";
-  height: 100px;
+.imagemMapa {
+  flex: 1;
+  height: 500px;
+  align-content: center;
+  margin-right: 10%;
+}
+.botaoMapa {
+  width: 30%;
   line-height: 42px;
-  margin-left: 30%;
   border: solid 1px;
   font-size: 15;
+  margin-left: 35%;
+  margin-right: 35%;
   margin-top: 15px;
   font-weight: bold;
   color: #ffffff;
@@ -185,7 +188,6 @@
   background: #ffffff;
   color: #3a6680;
 }
-
 /*Centro*/
 
 .h2Centro {
@@ -217,9 +219,9 @@
 
 .containerInformacoes {
   display: flex;
-  margin-left: -5%;
-  margin-right: -5%;
-  padding: 5%;
+  margin-left: -1%;
+  margin-right: -1%;
+  padding: 2%;
   color: white;
   background: #0379cd;
   flex-direction: column;
